[package]
name = "traceable_ring_nemocracy"
version = "0.1.0"
authors = ["Rachel <rachelxdr08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dns-lookup = "1.0.5"
rsa = "0.3.0"
rand = "0.7.0"
x25519-dalek = "1.1"
# rand_core  = { version = "0.5", default-features = false }
sha2 = "0.9.3"
# alloc = "0.3.5"


# Traceable ring github
blake2 = { version = "0.9", default-features = false }
curve25519-dalek = { version = "3.0", default-features = false, features = ["u64_backend"] }
digest = { version = "0.9", default-features = false }
generic-array = "0.9"
# This isn't the latest version of rand_core, but it's what Dalek is pinned to right now
rand_core  = { version = "0.5", default-features = false }

[dev-dependencies]
# This isn't the latest version of rand, but it's the latest that uses rand_core v0.5
rand = "0.7"

# Traceable ring github